# -*- coding: utf-8 -*-
#
# pyproject.toml
#

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
	"badidatetime/tests"
	]

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["django_pam", "django_pam.auth", "django_pam.accounts"]
exclude = ["tests*"]

[tool.hatch.build.targets.wheel]
only-include = ["django_pam", "django_pam.auth", "django_pam.accounts"]
exclude = ["tests*"]

#[project.scripts]
#your-script = "your_package.module:main_function"

[project]
name = "django-pam"
version = "3.0.0"
description = "Django PAM authentication backend implementation."
readme = "README.rst"
authors = [
  {name = "Carl J. Nobile", email = "carl.nobile@gmail.com"},
]
maintainers = [
  {name = "Carl J. Nobile", email = "carl.nobile@gmail.com"},
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "python-pam",
]
keywords = ["Django", "PAM"]
requires-python = ">= 3.10"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 6.0",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/cnobile2012/bahai-calendar"
Issues = "https://github.com/cnobile2012/bahai-calendar/issues"
